[tool.poetry]
name = "milvus-api"
version = "0.1.0"
description = "FastAPI service for PDF bulk import and hybrid search with Milvus"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12.4"

# Web framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }

# PDF parsing
pypdf = "^5.1.0"

# HTTP requests for bulk import API
requests = "^2.32.3"
python-multipart = "^0.0.20"
pymilvus = {version = "^2.6.2", extras = ["bulk_writer"] }
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
langchain = ">=0.3,<0.4"
langchain-text-splitters = "^0.3.11"

[tool.poetry.group.dev.dependencies]
# Optional dev tools
black = "^24.0.0"
isort = "^5.13.2"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
